--- a/.github/workflows/sync-home-digest.yml
+++ b/.github/workflows/sync-home-digest.yml
@@ -8,9 +8,14 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -26,8 +31,11 @@ jobs:
         env:
           WEBAPP_BASE_URL: ${{ secrets.WEBAPP_BASE_URL }}
 
-      - name: Publish digest
-        run: npm run publish:digest
-        env:
-          WEBAPP_BASE_URL: ${{ secrets.WEBAPP_BASE_URL }}
-          ADMIN_PUBLISH_TOKEN: ${{ secrets.ADMIN_PUBLISH_TOKEN }}
+      - name: Commit and push digest
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add data/home-latest.json
+          git diff --cached --quiet && echo "No changes" && exit 0
+          git commit -m "chore: auto update home digest"
+          git push
